# MM8-OS

./: .gitattributes  .gitignore  CMakeLists.txt  CONTRIBUTING.md  Makefile  README.md  create_image.sh  create_iso.sh  create_usb.sh  debug.gdb  format_hdd.sh  hello.c  m.sh  makefile  mc.sh  package.sh  r.sh  rants_or_other.txt  run.sh  stage2.dis  test.json  test.txt  toolchain.cmake
!!stuff/: todo.txt
MM8-OS/: Makefile  linkerScript.ld
MM8-OS/src/: boot.asm  kernel.asm  kernel.c  kernel.h
apps/: linker.ld
build_scripts/: config.mk  config.mk.old  generate_isrs.sh  toolchain.cmake  toolchain.mk  utility.py
src/bootloader/stage1/: CMakeLists.txt  Makefile.mk  boot.asm  entry.asm  kernel.map
src/bootloader/stage2/: CMakeLists.txt  Makefile  ctype.c  ctype.err  ctype.h  disk.c  disk.err  disk.h  entry.asm  fat.c  fat.err  fat.h  font.c  font.h  graphics.c  graphics.h  linker.ld  main.asm.old  main.c  main.err  memdefs.h  memory.c  memory.err  memory.h  stdbool.h  stdint.h  stdio.c  stdio.err  stdio.h  string.c  string.err  utility.err  utility.h  vbe.asm  vbe.h  vga_text.c  vga_text.h  x86.asm  x86.h
src/common/: bootinfo.h  stdint.h
src/kernel/: CMakeLists.txt  Fakefile.old  Makefile  Makefile.mk  bootinfo.inc  command.c  compat.c  ctype.c  ctype.h  disk.c  disk.h  diskio.c  editor.c  ehci.c  ehci.h  elf.c  elf.h  ext4_interface.c  fat.c  fat.h  ff.c  float.h  font.c  font.h  framebuffer.h  framebuffer_text.c  framebuffer_text.h  gdt.c  gdt.h  globals.h  gprintf.c  gprintf.h  graphics.c  graphics.h  heap.c  heap.h  inttypes.h  limits.h  linker.ld  main.c  (+26 more)
src/kernel/apps/calc/: calc.c  calc.h
src/kernel/apps/editor/: editor.c  editor.h
src/kernel/apps/gameEngine/: gameEngine.c  gameEngine.h
src/kernel/apps/imageview/: bmp.c  bmp.h
src/kernel/arch/i686/: gdt.asm  gdt.c  gdt.h  gdt_asm.asm  idt.c  idt.h  io.asm  io.c  io.h  irq.c  isr.c  isr.h  isrs_gen.c  keyboard.c  keyboard.h  paging.c  paging.h  pic.c  pic.h  screen_defs.c  screen_defs.h
src/kernel/arch/x86_64/: gdt.c  gdt.h  idt.asm  idt.c  idt.h  io.asm  io.c  io.h  irq.c  irq.h  isr.asm  isr.c  isr.h  isrs.asm  isrs_gen.c  isrs_gen.inc  keyboard.c  keyboard.h  pic.c  pic.h  screen_defs.c
src/kernel/commands/: 3dAniTest.c  3dAniTest.h  afk.c  afk.h  bot.c  bot.h  color.c  color.h  command.c  command.h  credits.c  cube.c  cube.h  json.c  json.h  mm8Splash.c  mm8Splash.h
src/kernel/fonts/: font.c  font.h
src/kernel/fs/: ext4.c  ext4.h  ext4_balloc.c  ext4_balloc.h  ext4_bcache.c  ext4_bcache.h  ext4_bitmap.h  ext4_block_group.h  ext4_blockdev.c  ext4_blockdev.h  ext4_config.h  ext4_crc32.h  ext4_debug.c  ext4_debug.h  ext4_dir.c  ext4_dir.h  ext4_dir_idx.c  ext4_dir_idx.h  ext4_extent.c  ext4_fs.c  ext4_fs.h  ext4_hash.c  ext4_hash.h  ext4_inode.h  ext4_journal.c  ext4_mbr.c  ext4_misc.h  ext4_mkfs.c  ext4_mkfs.h  ext4_types.h  ext4_xattr.c
src/kernel/fs/misc/: queue.h  tree.h
src/kernel/hal/: ehci.c  ehci.h  hal.c  ohci.c  ohci.h  pci.c  pci.h  usb_init.c  usb_msc.c  usb_msc.h
src/kernel/libs/cJSON/: cJSON.c
src/kernel/misc/: noCrash.c  noCrash.h
src/kernel/threeD/: rand1.c  rand1.h
tools/fat/: CMakeLists.txt
